--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,5 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background: url('../img/wow.png') bottom center no-repeat;
 }
