Declared background-size in body

--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,5 @@ body {
     justify-content: center;
     align-items: center;
     background: url('../img/wow.png') bottom center no-repeat;
+    background-size: cover;
 }
