Declared text style properties in h1

--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,9 @@ body {
     font-family:'Montserrat', sans-serif; 
     background: #f16059; 
   }
+
+h1 {
+  font-size: 2em; 
+  color: #fff; 
+  text-align: center;
+}
